# docs/swagger.json
@@ -109,8 +109,20 @@
                         "headers": {
                             "Set-Cookie": {
                                 "type": "string",
-                                "description": "auth=token; Path=/; Secure"
+                                "description": "token=jwt-token; Path=/; Secure"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/wrapper.FailResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/wrapper.FailResponse"
                         }
                     }
                 }
@@ -151,6 +163,12 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/wrapper.FailResponse"
                         }
                     }
                 }
@@ -322,6 +340,19 @@
                 "token": {
                     "type": "string",
                     "example": "token"
+                }
+            }
+        },
+        "wrapper.FailResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Example message"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": false
                 }
             }
         },
